# Epstein-File-Downloader

./: ._smoke_state.sqlite3  .gitignore  Keywords2.json  README.md  Schema.json  doj_disclosures.spec  keywords.json  links.txt  pyproject.toml  requirements.txt
scripts/: db_inspect.py
src/doj_disclosures/: app.py  cli.py
src/doj_disclosures/core/: browser_fetch.py  config.py  crawler.py  db.py  downloader.py  embedding_index.py  embeddings.py  feedback.py  hybrid_search.py  logging_config.py  matching.py  models.py  ner.py  parser.py  pipeline.py  redactions.py  release_monitor.py  relevance.py  robots.py  semantic.py  storage_gating.py  tables.py  triage_index.py  utils.py
src/doj_disclosures/gui/: __init__.py  keywords_dialog.py  main_window.py  models.py  results_window.py  settings_dialog.py  worker.py
src/doj_disclosures/resources/: default_keywords.json
tests/: conftest.py  test_crawler_queue.py  test_db_fts.py  test_downloader_resumable.py  test_entities_db.py  test_hybrid_search_fts_only.py  test_integration_mocked.py  test_matching.py  test_ner_regex_fallback.py  test_ocr_preprocess.py  test_parser_pdf.py  test_queue_prioritizes_pages.py  test_redactions.py  test_robots.py  test_same_site_www.py  test_table_extraction_pdf.py  test_tables_storage.py
