[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doj-disclosures-crawler"
version = "0.1.0"
description = "Cross-platform GUI crawler for DOJ disclosures with indexing and matching."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Local User"}]
dependencies = [
  "PySide6>=6.6",
  "aiohttp>=3.9",
  "aiosqlite>=0.20",
  "aiolimiter>=1.1.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.1",
  "platformdirs>=4.2",
  "pymupdf>=1.24",
  "python-docx>=1.1",
  "rapidfuzz>=3.6",
]

[project.optional-dependencies]
ocr = [
  "pytesseract>=0.3.10",
  "Pillow>=10.2",
]
semantic = [
  "sentence-transformers>=2.6.0",
  "torch>=2.1",
  "numpy>=1.26",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "aioresponses>=0.7.6",
  "ruff>=0.4",
  "mypy>=1.8",
]

[project.scripts]
doj-disclosures-gui = "doj_disclosures.app:main"
doj-disclosures-cli = "doj_disclosures.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
